Bug 484605 - TB doesn't import messages with many recipients or large msg header from Outlook Express. r=neil sr=bienvenu.